fixed spacing on navbar element

--- a/src/main/resources/static/css/plateful.css
+++ b/src/main/resources/static/css/plateful.css
@@ -58,6 +58,7 @@ nav ul li .btn {
 }
 header.container .row {
     padding: unset;
+    max-width: unset;
 }
 header.container {
     padding: unset;
